--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
   <div class="header-content">
-    <h1>Socially Responsible and Trustworthy Foundation Models (SRT-FM)</h1>
+    <h1>Socially Responsible and Trustworthy Foundation Models (ResponsibleFM)</h1>
     <div class="subtitle">NeurIPS 2025 Workshop, San Diego Convention Center</div>
     <nav>
       <a href="#about">About</a>
@@ -31,10 +31,10 @@
     <h2>About</h2>
     <div class="content-wrapper">
       <p>
-        The SRT-FM Workshop at NeurIPS 2025 is an interdisciplinary forum focused on advancing ethical, inclusive, and socially responsible research in foundation models (including language and multimodal models). With the increasing impact of foundation models on society, the workshop aims to proactively address ethical, social, and safety risks—integrating fairness, accountability, transparency, and safety into every phase of model development and deployment.
+        The ResponsibleFM Workshop at NeurIPS 2025 is an interdisciplinary forum focused on advancing ethical, inclusive, and socially responsible research in foundation models (including language and multimodal models). With the increasing impact of foundation models on society, the workshop aims to proactively address ethical, social, and safety risks—integrating fairness, accountability, transparency, and safety into every phase of model development and deployment.
       </p>
       <p>
-        SRT-FM brings together researchers, practitioners, ethicists, policy-makers, and affected communities to catalyze new methodologies, frameworks, and best practices that ensure foundation model research serves the common good.
+        ResponsibleFM brings together researchers, practitioners, ethicists, policy-makers, and affected communities to catalyze new methodologies, frameworks, and best practices that ensure foundation model research serves the common good.
       </p>
     </div>
   </section>
