--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Source+Serif+4:opsz,wght@8..60,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
   <div class="header-content">
     <h1>Socially Responsible and Trustworthy Foundation Models (ResponsibleFM)</h1>
-    <div class="subtitle">NeurIPS 2025 Workshop, San Diego Convention Center</div>
+    <div class="subtitle">NeurIPS 2025 Workshop · Hilton Mexico City Reforma</div>
     <nav>
       <a href="#about">About</a>
       <a href="#topics">Topics</a>
