--- a/index.html
+++ b/index.html
@@ -245,14 +245,14 @@
           <b>Submission Site:</b>
           <a href="https://openreview.net/" target="_blank" rel="noopener noreferrer">OpenReview</a> (details TBA)
         </div>
-        <div class="date-item">
-          <b>Deadline:</b> August 21, 2025
-        </div>
-        <div class="date-item">
-          <b>Notification:</b> September 21, 2025
-        </div>
+        <div class="date-item"><b>Key dates (AoE):</b></div>
+        <div class="date-item">🗓️ Submission Oct 31</div>
+        <div class="date-item">✅ Notification Nov 7</div>
+        <div class="date-item">📝 Camera ready Nov 23</div>
+        <div class="date-item">📍 Workshop date will be posted later</div>
       </div>
       <p class="submission-note">Submissions are double-blind, follow NeurIPS 2025 format, and are non-archival.</p>
+      <p class="submission-note">Awards: We will select one Best Paper and one Outstanding Paper.</p>
     </div>
   </section>
 
