--- a/index.html
+++ b/index.html
@@ -253,6 +253,29 @@
       </div>
       <p class="submission-note">Submissions are double-blind, follow NeurIPS 2025 format, and are non-archival.</p>
       <p class="submission-note">Awards: We will select one Best Paper and one Outstanding Paper.</p>
+      <div class="submission-guidelines">
+        <h3 id="submission-guidelines">Submission Guidelines</h3>
+        <ul>
+          <li>
+            <b>Format:</b> All submissions must be a single PDF file. We welcome high-quality original papers up to 8 pages. References and appendices are not included in the page limit, but the main text must be self-contained. Reviewers are not required to read beyond the main text
+          </li>
+          <li>
+            <b>Interdisciplinary submissions:</b> You do not need a computer science background. We welcome cross-disciplinary submissions from all relevant fields, as long as the research relates to foundation models.
+          </li>
+          <li>
+            <b>Style file:</b> You must format your submission using the NeurIPS 2025 LaTeX style file. Please include the references and supplementary materials in the same PDF. The maximum file size for submissions is 50MB. Submissions that violate the NeurIPS style (e.g., by decreasing margins or font sizes) or page limits may be rejected without further review.
+          </li>
+          <li>
+            <b>Dual-submission and non-archival policy:</b> We welcome ongoing and unpublished work. We will also accept papers that are under review at the time of submission, or that have been recently accepted, provided they do not breach any dual-submission or anonymity policies of those venues. The workshop is a non-archival venue and will not have official proceedings. Workshop submissions can be subsequently or concurrently submitted to other venues.
+          </li>
+          <li>
+            <b>Visibility:</b> Submissions and reviews will not be public. Only accepted papers will be made public.
+          </li>
+          <li>
+            <b>Double-blind reviewing:</b> All submissions must be anonymized and may not contain any identifying information that may violate the double-blind reviewing policy. This policy applies to any supplementary or linked material as well, including code. If you are including links to any external material, it is your responsibility to guarantee anonymous browsing. Please do not include acknowledgements at submission time. If you need to cite one of your own papers, you should do so with adequate anonymization to preserve double-blind reviewing. Any papers found to be violating this policy will be rejected.
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
 
