--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
       </div>
       <div class="organizer-card">
         <div class="organizer-image">
+          <img src="images/xiangliang.jpg" alt="Xiangliang Zhang" loading="lazy">
+        </div>
+        <div class="organizer-info">
+          <b>Xiangliang Zhang</b>
+          <span class="affiliation">University of Notre Dame</span>
+        </div>
+      </div>
+      <div class="organizer-card">
+        <div class="organizer-image">
           <img src="images/mohit.png" alt="Mohit Bansal" loading="lazy">
         </div>
         <div class="organizer-info">
