--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="important-dates">
         <div class="date-item">
           <b>Submission Site:</b>
-          <a href="https://openreview.net/" target="_blank" rel="noopener noreferrer">OpenReview</a> (details TBA)
+          <a href="https://openreview.net/group?id=NeurIPS.cc/2025/Workshop_Mexico_City/ResponsibleFM#tab-your-consoles" target="_blank" rel="noopener noreferrer">OpenReview</a> (details TBA)
         </div>
         <div class="date-item"><b>Key dates (AoE):</b></div>
         <div class="date-item">🗓️ Submission Oct 31</div>
