--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
       <div class="important-dates">
         <div class="date-item">
           <b>Submission Site:</b>
-          <a href="https://openreview.net/group?id=NeurIPS.cc/2025/Workshop_Mexico_City/ResponsibleFM#tab-your-consoles" target="_blank" rel="noopener noreferrer">OpenReview</a>
+          <a class="openreview-link" href="https://openreview.net/group?id=NeurIPS.cc/2025/Workshop_Mexico_City/ResponsibleFM#tab-your-consoles" target="_blank" rel="noopener noreferrer">OpenReview</a>
         </div>
         <div class="date-item"><b>Key dates (AoE):</b></div>
-        <div class="date-item">🗓️ Submission Oct 31</div>
+        <div class="date-item">🗓️ Submission Nov 3</div>
         <div class="date-item">✅ Notification Nov 7</div>
         <div class="date-item">📝 Camera ready Nov 23</div>
         <div class="date-item">📍 Workshop date will be posted later</div>
@@ -295,7 +295,7 @@
     <h2>Program Committee</h2>
     <div class="content-wrapper">
       <p>
-        The program committee includes over 70 researchers and practitioners worldwide. A full list will be announced soon.
+        The program committee includes over 30 researchers and practitioners worldwide. A full list will be announced soon.
       </p>
     </div>
   </section>
